--- a/app/views/portifolio/index.html.erb
+++ b/app/views/portifolio/index.html.erb
@@ -4,7 +4,7 @@
     <title>Portfólio</title>
 </head>
 <body>
-    <header class="d-flex justify-content-between align-items-center p-3" style="background-color: #252967;">
+    <header class="d-flex justify-content-between align-items-center">
         <%= image_tag 'logoPortifolio.png', alt: 'logo', class: 'img-fluid', style: 'height: 50px;' %>
 
         <ul class="nav">
